--- a/electronic-queue/docker-compose.yml
+++ b/electronic-queue/docker-compose.yml
@@ -8,6 +8,6 @@ services:
     environment:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=social_db
+      - POSTGRES_DB=electronic_queue_db
     ports:
       - "5432:5432"
